--- a/stay/rooms.html
+++ b/stay/rooms.html
@@ -32,9 +32,9 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="/src/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/hotel-page/listinghotel.css" />
-    <link rel="stylesheet" href="/src/hotel-page/hoteldetails.css" />
-    <link rel="stylesheet" href="/src/hotel-page/rooms.css" />
+    <link rel="stylesheet" href="/src/stay-page/stayslisting.css" />
+    <link rel="stylesheet" href="/src/stay-page/staysdetails.css" />
+    <link rel="stylesheet" href="/src/stay-page/rooms.css" />
     <link rel="stylesheet" href="/src/global-utilities/utilities.css" />
     <link rel="stylesheet" href="/src/global-utilities/responsive.css" />
   </head>
@@ -831,9 +831,9 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="/src/landing-page/main.js"></script>
-    <script type="module" src="/src/hotel-page/hotelsearch.js"></script>
-    <script type="module" src="/src/hotel-page/listinghotel.js"></script>
-    <script type="module" src="/src/hotel-page/hoteldetails.js"></script>
+    <script type="module" src="/src/stay-page/searchstays.js"></script>
+    <script type="module" src="/src/stay-page/stayslisting.js"></script>
+    <script type="module" src="/src/stay-page/staysdetails.js"></script>
     <script type="module" src="/src/global-utilities/swiper.js"></script>
   </body>
 </html>
