--- a/stay/stayslisting.html
+++ b/stay/stayslisting.html
@@ -32,7 +32,7 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="/src/landing-page/styles.css" />
-    <link rel="stylesheet" href="/src/hotel-page/listinghotel.css" />
+    <link rel="stylesheet" href="/src/stay-page/stayslisting.css" />
     <link rel="stylesheet" href="/src/global-utilities/utilities.css" />
     <link rel="stylesheet" href="/src/global-utilities/responsive.css" />
   </head>
@@ -293,7 +293,7 @@
           </div>
 
           <!-- Accommodations -->
-          <div class="hotel-card">
+          <div class="hotel-card stays-listing">
             <div class="hotel-info">
               <div class="hotel-logo">
                 <img src="/assets/listing-bg-main.svg" alt="Bed" />
@@ -353,10 +353,10 @@
               </div>
             </div>
           </div>
-          <div class="hotel-card">
+          <div class="hotel-card stays-listing">
             <div class="hotel-info">
               <div class="hotel-logo">
-                <img src="/assets/listing-bg-2.jpg" alt="Bed" />
+                <img src="/assets/listing-bg-main-2.jpg" alt="Bed" />
                 <div class="hotel-logo-overlay">
                   <p class="fs-12 fw-medium">9 images</p>
                 </div>
@@ -413,7 +413,7 @@
               </div>
             </div>
           </div>
-          <div class="hotel-card">
+          <div class="hotel-card stays-listing">
             <div class="hotel-info">
               <div class="hotel-logo">
                 <img src="/assets/listing-bg-4.jpg" alt="Bed" />
@@ -473,10 +473,10 @@
               </div>
             </div>
           </div>
-          <div class="hotel-card">
+          <div class="hotel-card stays-listing">
             <div class="hotel-info">
               <div class="hotel-logo">
-                <img src="/assets/listing-bg-7.svg" alt="Bed" />
+                <img src="/assets/listing-bg-main-2.jpg" alt="Bed" />
                 <div class="hotel-logo-overlay">
                   <p class="fs-12 fw-medium">9 images</p>
                 </div>
@@ -620,8 +620,8 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="/src/landing-page/main.js"></script>
-    <script type="module" src="/src/hotel-page/hotelsearch.js"></script>
-    <script type="module" src="/src/hotel-page/listinghotel.js"></script>
+    <script type="module" src="/src/stay-page/searchstays.js"></script>
+    <script type="module" src="/src/stay-page/stayslisting.js"></script>
     <script type="module" src="/src/global-utilities/swiper.js"></script>
   </body>
 </html>
